/*
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 */

syntax = "proto3";

package kritor.developer;

option csharp_namespace = "Kritor.Developer";
option java_multiple_files = true;
option java_package = "io.kritor.developer";
option go_package = "grpc/kritor/developer";

service DeveloperService {
  rpc Shell(ShellRequest) returns (ShellResponse);
  rpc GetLog(GetLogRequest) returns (GetLogResponse);
  rpc ClearCache(ClearCacheRequest) returns (ClearCacheResponse);
  rpc GetDeviceBattery(GetDeviceBatteryRequest) returns (GetDeviceBatteryResponse); // 获取设备电量

  rpc UploadImage(UploadImageRequest) returns (UploadImageResponse);
  rpc SendPacket(SendPacketRequest) returns (SendPacketResponse);
}

message ShellRequest {
  repeated string command = 1;
  string directory = 2;
}

message ShellResponse {
  bool is_success = 1;
  string data = 2;
}

message GetLogRequest {
  uint64 start = 1;
  bool recent = 2;
}

message GetLogResponse {
  bool is_success = 1;
  string log = 2;
}

message ClearCacheRequest {
}

message ClearCacheResponse {
}

message GetDeviceBatteryRequest {
}

message GetDeviceBatteryResponse {
  uint32 battery = 1; // 设备电量
  uint32 scale = 2;
  uint32 status = 3;
}

message UploadImageRequest {
  oneof data {
    bytes file = 1;       // 文件内容
    string file_name = 2; // 文件文件名
    string file_path = 3; // 文件绝对路径
    string file_url = 4;  // 文件下载地址
  }
  uint64 group_id = 5;
}

message UploadImageResponse {
  bool is_success = 1;
  string image_url = 2;
}

message SendPacketRequest {
  string command = 1;
  bytes request_buffer = 2;
  bool is_protobuf = 3;
  map<string, string> attrs = 4;
}

message SendPacketResponse {
  bool is_success = 1;
  bytes response_buffer = 2;
}